--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -5,17 +5,60 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
 }
 
 .header-box{
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding-bottom: 50px;
 
 
 
     .header-left{
         display: flex;
-        align-items: center;
+        align-items: end;
+        gap: 10px;
+
+        .logo-box{
+            display: flex;
+        }
     }
+
+    .header-name{
+        color: white;
+        font-size: 24px;
+        font-weight: 400;
+
+        h1{
+            font-weight: 400;
+        }
+    }
+
+    .header-right{
+        ul{
+            display: flex;
+            gap: 50px;
+
+            li{
+                list-style-type: none;
+
+                a{
+                    text-decoration: none;
+                    color: white;
+                    font-size: 18px;
+                    padding-bottom: 10px;
+                    position: relative;
+                };
+
+        
+                a.active{
+                    border-bottom: 1px solid white;
+                }
+            }
+
+        }
+    }
+
 }
